--- a/Goals/Base.lproj/Main.storyboard
+++ b/Goals/Base.lproj/Main.storyboard
@@ -78,10 +78,11 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U3N-fP-UrL">
-                                <rect key="frame" x="246" y="25" width="103" height="60"/>
+                                <rect key="frame" x="246" y="25" width="129" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="NRz-rG-BNo"/>
                                 </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
                                 <state key="normal" image="plus"/>
                                 <connections>
                                     <segue destination="MrB-al-WmQ" kind="show" id="SKP-EM-ySu"/>
@@ -91,7 +92,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="iw4-Nm-kgk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1vn-zz-nSJ"/>
-                            <constraint firstItem="U3N-fP-UrL" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" constant="-10" id="4jB-hS-AUp"/>
+                            <constraint firstAttribute="trailing" secondItem="U3N-fP-UrL" secondAttribute="trailing" id="424-wt-6Qo"/>
                             <constraint firstItem="lHG-AW-2aH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9B9-2T-L2A"/>
                             <constraint firstItem="iw4-Nm-kgk" firstAttribute="top" secondItem="ZkC-Tn-aS5" secondAttribute="bottom" constant="30" id="AIC-ji-1eE"/>
                             <constraint firstItem="ZkC-Tn-aS5" firstAttribute="top" secondItem="lHG-AW-2aH" secondAttribute="bottom" constant="15" id="C50-4i-8GW"/>
@@ -133,10 +134,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UHG-VI-2DE">
-                                <rect key="frame" x="16" y="30" width="117" height="60"/>
+                                <rect key="frame" x="0.0" y="30" width="133" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="DC1-dt-k36"/>
                                 </constraints>
+                                <inset key="imageEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" image="Back Chevron"/>
                                 <connections>
                                     <action selector="backPressed:" destination="MrB-al-WmQ" eventType="touchUpInside" id="XC3-Op-A1C"/>
@@ -158,10 +160,10 @@
                             <constraint firstItem="TXs-PV-gJu" firstAttribute="top" secondItem="b1a-58-6HC" secondAttribute="bottom" constant="20" id="1Se-fd-h8d"/>
                             <constraint firstItem="TXs-PV-gJu" firstAttribute="leading" secondItem="UHG-VI-2DE" secondAttribute="trailing" constant="8" id="GFg-em-ukN"/>
                             <constraint firstItem="uA5-k7-4dS" firstAttribute="top" secondItem="b1a-58-6HC" secondAttribute="bottom" constant="10" id="PEL-3k-JLF"/>
-                            <constraint firstItem="UHG-VI-2DE" firstAttribute="leading" secondItem="uxC-G4-S9k" secondAttribute="leadingMargin" id="WgG-zn-xD3"/>
                             <constraint firstItem="uA5-k7-4dS" firstAttribute="leading" secondItem="TXs-PV-gJu" secondAttribute="trailing" constant="8" id="ZfC-XZ-A1k"/>
                             <constraint firstItem="UHG-VI-2DE" firstAttribute="top" secondItem="b1a-58-6HC" secondAttribute="bottom" constant="10" id="grU-4l-LYj"/>
                             <constraint firstAttribute="trailingMargin" secondItem="uA5-k7-4dS" secondAttribute="trailing" id="on7-dh-ukg"/>
+                            <constraint firstItem="UHG-VI-2DE" firstAttribute="leading" secondItem="uxC-G4-S9k" secondAttribute="leading" id="we4-Bw-sJV"/>
                             <constraint firstItem="TXs-PV-gJu" firstAttribute="centerX" secondItem="uxC-G4-S9k" secondAttribute="centerX" id="yx1-OU-Ut7"/>
                         </constraints>
                     </view>
