--- a/Goals/Base.lproj/Main.storyboard
+++ b/Goals/Base.lproj/Main.storyboard
@@ -155,6 +155,9 @@
                                 <state key="normal" title="SAVE">
                                     <color key="titleColor" red="1" green="0.15744972229003906" blue="0.14414456486701965" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="savePressed:" destination="MrB-al-WmQ" eventType="touchUpInside" id="rRP-Xe-GKs"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="sZr-If-iaI">
                                 <rect key="frame" x="16" y="109" width="343" height="76.5"/>
@@ -213,6 +216,10 @@
                             <constraint firstItem="TXs-PV-gJu" firstAttribute="centerX" secondItem="uxC-G4-S9k" secondAttribute="centerX" id="yx1-OU-Ut7"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="datePicker" destination="jDJ-s5-94d" id="4l0-zt-HnU"/>
+                        <outlet property="name" destination="Mha-26-Ikh" id="ool-3h-uNa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lww-hM-a0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
