--- a/Goals/Base.lproj/Main.storyboard
+++ b/Goals/Base.lproj/Main.storyboard
@@ -204,34 +204,30 @@
                                     <constraint firstAttribute="height" constant="128" id="FLX-T4-q8J"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TzI-WE-YSl">
-                                    <size key="itemSize" width="36" height="33"/>
+                                    <size key="itemSize" width="20" height="20"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorCell" id="CBg-ei-gdD">
-                                        <rect key="frame" x="0.0" y="0.0" width="36" height="33"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="36" height="33"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1uT-9d-DZr" customClass="CircleView" customModule="Goals" customModuleProvider="target">
-                                                    <rect key="frame" x="8" y="7" width="20" height="20"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                     <color key="backgroundColor" red="0.26274509800000001" green="0.61176470589999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="Yau-TT-lDG"/>
-                                                        <constraint firstAttribute="width" constant="20" id="iUA-lD-m0l"/>
-                                                    </constraints>
                                                 </view>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="1uT-9d-DZr" secondAttribute="trailing" constant="8" id="Y5D-Tm-aYc"/>
-                                            <constraint firstItem="1uT-9d-DZr" firstAttribute="top" secondItem="CBg-ei-gdD" secondAttribute="top" constant="7" id="Yy9-Ji-P5P"/>
-                                            <constraint firstAttribute="bottom" secondItem="1uT-9d-DZr" secondAttribute="bottom" constant="6" id="cSD-dq-JAm"/>
-                                            <constraint firstItem="1uT-9d-DZr" firstAttribute="leading" secondItem="CBg-ei-gdD" secondAttribute="leading" constant="8" id="hFu-Cn-0pZ"/>
+                                            <constraint firstAttribute="bottom" secondItem="1uT-9d-DZr" secondAttribute="bottom" id="3fs-Xy-AoE"/>
+                                            <constraint firstItem="1uT-9d-DZr" firstAttribute="leading" secondItem="CBg-ei-gdD" secondAttribute="leading" id="G1V-fu-cnk"/>
+                                            <constraint firstAttribute="trailing" secondItem="1uT-9d-DZr" secondAttribute="trailing" id="Wam-lN-MKX"/>
+                                            <constraint firstItem="1uT-9d-DZr" firstAttribute="top" secondItem="CBg-ei-gdD" secondAttribute="top" id="nRO-eS-EuH"/>
                                         </constraints>
                                     </collectionViewCell>
                                 </cells>
